package com.flowboard.notification.config;

import lombok.extern.slf4j.Slf4j;
import org.springframework.context.annotation.Configuration;

/**
 * Kafka consumer config is disabled while Kafka is not available.
 */
@Slf4j
@Configuration
public class KafkaConsumerConfig {
    // Kafka consumer disabled - broker not available
}